--- a/TA5/app/src/main/res/layout/activity_main.xml
+++ b/TA5/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="mapa"
         android:text="Mapa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
