--- a/TA5/app/src/debug/res/values/google_maps_api.xml
+++ b/TA5/app/src/debug/res/values/google_maps_api.xml
@@ -21,6 +21,7 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        <!--Se obtuvo la clave de google api console-->
         AIzaSyCbs6zSp1CTEWl6mrvHXwyvZ7AQTYPvx3E
     }
     </string>
